# when_trash

./: README.md  pyproject.toml  template.html  upcoming.md  waste_collection_schedule.ics  waste_data.json  waste_schedule.db  waste_table.html  waste_table.md  waste_today_tomorrow.json  when.py
.github/workflows/: update_waste_schedule.yml
